--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.sunshine.app" >
 
+    <!-- Special permissions for the Sunshine app -->
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- end  -->
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
